# systeme

./: CMakeLists.txt
Projet/: client.c  serveur.c
TD1/: exo0.c  exo1.c  exo2.c  exo3.c  exo5.c  exo6.c  exo7.c  exo8.c  exo8.h
TD2/: exo1.c  exo2.c  exo3.c  exo4.c  exo5.c  exo6.c  exo7.c  exo8.c  exo9.c
TD3/: exo1.c  exo2.c  exo3.c  exo4.c  exo5a.c  exo5b.c  exo6.c  exo7.c  exo8.c  exo9.c
TD4/: exo1.c  exo10a.c  exo10b.c  exo2.c  exo3.c  exo4.c  exo5.c  exo6.c  exo7.c  exo8.c  exo9a.c  exo9b.c
TD5/exo1/: client.c  serveur.c
TD5/exo2/: client.c  serveur.c
TD5/exo3/: client.c  serveur.c
TD5/exo4/: client.c  serveur.c
TD5/exo5/: client.c  serveur.c
